Fix z-index Header

--- a/frontend/src/assets/scss/index/main.scss
+++ b/frontend/src/assets/scss/index/main.scss
@@ -4,6 +4,7 @@ header.headerNoPanel {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
   nav{
     display: flex;
     justify-content: flex-end;
